--- a/BloodDonor/HSLoginChoiceViewController.xib
+++ b/BloodDonor/HSLoginChoiceViewController.xib
@@ -14,6 +14,7 @@
 			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
+			<string>IBUILabel</string>
 			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -38,11 +39,11 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="88321318">
 						<reference key="NSNextResponder" ref="718683247"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="718683247"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="621904952"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -51,18 +52,51 @@
 							<string key="NSResourceName">background.png</string>
 						</object>
 					</object>
-					<object class="IBUIButton" id="71520076">
+					<object class="IBUILabel" id="1032388398">
 						<reference key="NSNextResponder" ref="718683247"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{16, 20}, {145, 39}}</string>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{90, 219}, {140, 23}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="571984444"/>
+						<reference key="NSNextKeyView" ref="862324688"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Присоединяйтесь</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuNjk4MDM5MjE1NyAwLjYzOTIxNTY4NjMAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="321292421">
+							<int key="type">2</int>
+							<double key="pointSize">15</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="6888016">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">15</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUIButton" id="621904952">
+						<reference key="NSNextResponder" ref="718683247"/>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{40, 147}, {240, 44}}</string>
+						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1032388398"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">Войти</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="278498172">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -75,76 +109,54 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="NSCustomResource" key="IBUIHighlightedImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">authorizationButtonPressed.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">authorizationButtonNormal.png</string>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="321292421">
-							<int key="type">2</int>
-							<double key="pointSize">15</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="294849890">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
-						</object>
+						<reference key="IBUIFontDescription" ref="321292421"/>
+						<reference key="IBUIFont" ref="6888016"/>
 					</object>
-					<object class="IBUIButton" id="571984444">
+					<object class="IBUIButton" id="862324688">
 						<reference key="NSNextResponder" ref="718683247"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{21, 118}, {140, 39}}</string>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{40, 250}, {240, 44}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="81635563"/>
+						<reference key="NSNextKeyView" ref="335704825"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">Войти через facebook</string>
 						<reference key="IBUIHighlightedTitleColor" ref="278498172"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="584196425"/>
-						<object class="NSCustomResource" key="IBUIHighlightedImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">registrationButtonPressed.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">registrationButtonNormal.png</string>
-						</object>
 						<reference key="IBUIFontDescription" ref="321292421"/>
-						<reference key="IBUIFont" ref="294849890"/>
+						<reference key="IBUIFont" ref="6888016"/>
 					</object>
-					<object class="IBUIButton" id="81635563">
+					<object class="IBUIButton" id="335704825">
 						<reference key="NSNextResponder" ref="718683247"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{10, 67}, {290, 43}}</string>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrame">{{40, 301}, {240, 44}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">Регистрация</string>
 						<reference key="IBUIHighlightedTitleColor" ref="278498172"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="584196425"/>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">facebook_login_button_normal.png</string>
-						</object>
 						<reference key="IBUIFontDescription" ref="321292421"/>
-						<reference key="IBUIFont" ref="294849890"/>
+						<reference key="IBUIFont" ref="6888016"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 392}}</string>
@@ -179,36 +191,36 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">facebookAuthorizationButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="81635563"/>
+						<reference key="destination" ref="862324688"/>
 					</object>
-					<int key="connectionID">50</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">facebookAuthenticationSelected:</string>
-						<reference key="source" ref="81635563"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">46</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">registrationSelected:</string>
-						<reference key="source" ref="571984444"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">48</int>
+					<int key="connectionID">55</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">basicAuthenticationSelected:</string>
-						<reference key="source" ref="71520076"/>
+						<reference key="source" ref="621904952"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">45</int>
+					<int key="connectionID">56</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">facebookAuthenticationSelected:</string>
+						<reference key="source" ref="862324688"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">57</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">registrationSelected:</string>
+						<reference key="source" ref="335704825"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">58</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -235,9 +247,10 @@
 						<reference key="object" ref="718683247"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="88321318"/>
-							<reference ref="71520076"/>
-							<reference ref="81635563"/>
-							<reference ref="571984444"/>
+							<reference ref="862324688"/>
+							<reference ref="1032388398"/>
+							<reference ref="621904952"/>
+							<reference ref="335704825"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -247,18 +260,23 @@
 						<reference key="parent" ref="718683247"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">9</int>
-						<reference key="object" ref="71520076"/>
+						<int key="objectID">51</int>
+						<reference key="object" ref="621904952"/>
 						<reference key="parent" ref="718683247"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="571984444"/>
+						<int key="objectID">52</int>
+						<reference key="object" ref="862324688"/>
 						<reference key="parent" ref="718683247"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">5</int>
-						<reference key="object" ref="81635563"/>
+						<int key="objectID">53</int>
+						<reference key="object" ref="335704825"/>
+						<reference key="parent" ref="718683247"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">54</int>
+						<reference key="object" ref="1032388398"/>
 						<reference key="parent" ref="718683247"/>
 					</object>
 				</array>
@@ -270,17 +288,16 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="0.0" key="8.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
-				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="9.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="53.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="54.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">50</int>
+			<int key="maxID">58</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -340,14 +357,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="authorizationButtonNormal.png">{140, 39}</string>
-			<string key="authorizationButtonPressed.png">{140, 39}</string>
-			<string key="background.png">{320, 480}</string>
-			<string key="facebook_login_button_normal.png">{270, 39}</string>
-			<string key="registrationButtonNormal.png">{140, 39}</string>
-			<string key="registrationButtonPressed.png">{140, 39}</string>
-		</dictionary>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">background.png</string>
+			<string key="NS.object.0">{320, 480}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
